--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node": ">= 0.4.x < 0.7.0"
   },
   "dependencies": {
+    "async": "0.1.x",
     "inherits": "1.0.x"
   },
   "devDependencies": {
